made a naming change in order to fix some layout issues. Applied the change to the style sheet.

--- a/app/styles/community-planning.scss
+++ b/app/styles/community-planning.scss
@@ -64,7 +64,7 @@ Community Planning Page
   // }
 }
 
-.construction-images-container {
+.community-images-container {
   margin-top: 20px;
   background-color: rgba(0, 0, 0, 0.7);
   width: 700px;
